<resources>
    <string name="app_name">Tuproq namligi monitoringi</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_external_characters">G‘o‘zaning sug‘orish muddatini tashqi belgilari yordamida aniqlash</string>
    <string name="str_external_characters_1"> \u0020  G‘o‘zani sug‘orish muddatlarini tashqi belgilari yordamida aniqlash bo‘yicha ko‘plab olimlar tadqiqotlar o‘tkazgan va quyidagi usullar yaratilgan (1-rasm). G‘o‘zaning tashqi belgilari bo‘yicha sug‘orish muddatini aniqlash sodda va hammabop usul bo‘lib, V.E.Eremenko va M.I.Portnix tomonidan ishlab chiqilgan. Bu usulda sug‘orish zarurligi gullashgacha - barglarning kuchsiz so‘lishi (turgorning pasayishi) bilan, gullash - hosil to‘plash davrida esa gullash bo‘g‘inining almashishi bo‘yicha aniqlanadi. Tuproqda namlik yetishmasligi o‘simlikning birinchi navbatda ichki fiziologik o‘zgarishlariga ta\'sir qilib, keyinchalik tashqi belgilarida namoyon bo‘ladi.</string>
    <string name="str_external_character_2">1-rasm. G‘o‘zaning sug‘orish muddatlarini tashqi belgilari bo‘yicha aniqlash usullari</string>
    <string name="str_refractometer">O‘rta tolali g‘o‘za navlarining sug‘orish muddatlarini aniqlashda maqbul refraktometr shkalalari</string>
    <string name="str_refractometer_1">\u0020 Tuproqda namlikni normal holda saqlanishi undagi mikroorganizmlarning ko‘payishiga, organik qoldiqlarning chirib, tuproq unumdorligini va ekinlar hosildorligini oshishiga olib keladi. Tuproqdagi namlikning o‘zgarishi bilan birga undagi harorat va havo tartibi ham o‘zgarib boradi. Tuproqda namlikning kamayshi undagi azotning bug‘lanib, tuproqdagi miqdorining kamayishiga olib keladi.\n
        \u0020 Qishloq xo‘jaligi ekinlarining sug‘orish muddatlarini aniqlash uchun ko‘plab uslub va usullardan foydalaniladi. Nafaqat g‘o‘za, balki boshqa ko‘plab ziroatlarni sug‘orish muddatini tuproq namligi bo‘yicha belgilash eng ishonchli uslublardan biri bo‘lib, ziroatlardan yuqori hosil olish uchun tuproqda o‘simlik o‘zlashtira oladigan doimiy namlik bo‘lishi zarur va unga maqbul namlik darajasi taʼminlanishi kerak. Shuning uchun ham sug‘orish oldi tuproq namligini belgilangan meʼyorlarda saqlab turish uchun sug‘orish oldi tuproq namligini termostat tarozi usulda aniqlab borish klassik usul hisoblanadi. Lekin ushbu usul ko‘p vaqt, mehnat talab qiladi. Shu sababli g‘o‘zaning sug‘orish muddatlarini tezkor aniqlashda yangi zamonaviy elektron qo‘l refraktometrlaridan foydalanish maqsadga muvofiqdir. Buning uchun har bir g‘o‘za navi uchun refraktometr shkalalarini ishlab chiqish zarur. Chunki, bitta shkala barcha navlar uchun maqbul hisoblanmaydi. G‘o‘za navlarining suvga bo‘lgan talabiga qarab refraktometr shkalalari 1-3 % gacha farqlanadi. Bitta tuproq sharoitida ham suvga bo‘lgan talabiga qarab, bir xil tuproq namligida g‘o‘za navlarining hujayra shira konsentratsiyasi farq qiladi. Hujayra shira konsentratsiyasi suvga talabi yuqori bo‘lgan tezpishar g‘o‘za navlarida suvga talabi bir oz pastroq bo‘lgan g‘o‘za navlariga nisbatan 1-2 % dan 3-4 % gacha kamroq bo‘ladi. Shuning uchun har bir navning biologiyasidan kelib chiqib, refraktometr shkalalarini alohida ishlab chiqish zarur.\n
        \u0020 Refraktometr orqali aniqlangan barg hujayra shirasi konsentratsiyasining ChDNSga nisbatan sug‘orish oldi tuproq namligiga mutanosibligi tekshirilganda, teskari korrelyasiya aniqlandi. Yaʼni tuproq namligi pasayib borishi bilan refraktometr ko‘rsatkichi ortib borganligi qayd etildi. Bunda korrelyasiya koeffitsiyenti -0,93 bo‘lib, standart chetlanish ±0,08, o‘lchangan kuzatuvlar soni esa n=36 ga teng bo‘ldi. Eng kichik ehtimollik xatoligi Fisher kriteriyasi bo‘yicha >0,05 bo‘lganda olindi .></string>
    <string name="str_refractometer_2">Refraktometr shkalalari (Toshkent viloyatining sug‘oriladigan tipik bo‘z tuproqlari sharoitida, 2015-2017 yillar)</string>
    <string name="str_refractometer_3"> \u0020 Izoh: Har bir nav uchun o‘suv davrlari bo‘yicha maqbul shkalalar qora rangdagi raqamlarda ifodalangan \n
        \u0020 Tuproq namligi kamayib borishi bilan barg hujayra shira konsentratsiyasi oshib boradi. Bu degani tuproqda namlik qanchalik kamaysa o‘simlikning barglaridagi hujayralarida ham suv miqdori kamayib, shira konsentratsiyasi oshib boradi.</string>
    <string name="str_refractometer_4">\u0020 Tuproq namliklari aniqlangan joydan g‘o‘za barg hujayra shira konsentratsiyasini aniqlab borildi. Ushbu aniqlangan HSHK bilan tuproq namliklari taqqoslanib refraktometr shkalalari ishlab chiqildi. Ushbu shkalalar keyingi tadqiqotlarda tuproq namliklarini aniqlamasdan turib g‘o‘zaning sug‘orish muddatlarini belgilashda foydalish uchun asos bo‘ladi. Bu esa g‘o‘za parvarishida fermerlar va foydalanuvchilar uchun eng yaqin ko‘makchi hisoblanishi mumkin.\n
        \u0020 “S-5707“ g‘o‘za navini sug‘orish oldi tuproq namligi ChDNSga nisbatan 70-75-65 % bo‘lganda gullashgacha refraktometr shkalasi 14-16 % da, gullash-hosil to‘plash davrida 13-15 % da, pishish davrida 19-21 % da sug‘orish tavsiya etiladi.</string>
    <string name="str_refractometer_5">“S-5707“ g‘o‘za navining sug‘orish muddatlarini tuproq namliklariga bog‘liq holda ishlab chiqilgan refraktometr shkalalari, 2018-2019 yillar (Toshkent)</string>
    <string name="str_refractometer_6">\u0020 Jarqo‘rg‘on g‘o‘za navini sug‘orish oldi tuproq namligi ChDNSga nisbatan 65-65-60 % bo‘lganda refraktometr shkalasi gullashgacha 17-19 % da, gullash-hosil to‘plash davrida 18-20 % da, pishish davrida 20-22 % da sug‘orish tavsiya etiladi.\n
        \u0020 Eʼtibor qaratsak, Jarqo‘rg‘on g‘o‘za navida refraktometr shkalalri o‘ta yuqoriligini ko‘rish mumkin. Bu esa boshqa navlarga nisbatan ushbu navning suv tanqisligiga nisbatan bardoshli ekanligini ko‘rsatib turibdi.</string>
    <string name="str_refractometer_7">“Jarqo‘rg‘on” g‘o‘za navining sug‘orish muddatlarini tuproq namliklariga bog‘liq holda ishlab chiqilgan refraktometr shkalalari, 2018-2019 yy (Toshkent)</string>
    <string name="str_refractometer_8">\u0020 “S-8295“ g‘o‘za navini sug‘orish oldi tuproq namligi ChDNSga nisbatan 70-75-65 % bo‘lganda gullashgacha refraktometr shkalasi 12-14 % da, gullash-hosil to‘plash davrida 12-14 % da, pishish davrida 18-20 % da sug‘orish tavsiya etiladi</string>
    <string name="str_refractometer_9">“S-8295” g‘o‘za navining sug‘orish muddatlarini tuproq namliklariga bog‘liq holda ishlab chiqilgan refraktometr shkalalari, 2018-2019 yillar (Toshkent)</string>
    <string name="str_refractometer_10">\u0020 “Kelajak” g‘o‘za navida refraktometr ko‘rsatkichlari “Jarqo‘rg‘on” g‘o‘za navidagi ko‘rsatkichlardan atigi 1-2 % ga kamroq bo‘lib, “Jarqo‘rg‘on” g‘o‘za naviga nisbatan esa suvga talabi yuqoriroq ekanligi aniqlandi. Aksincha Kelajak navining suvga bo‘lgan talabi “S-5707” va “S-8295” g‘o‘za navlariga nisbatan birmuncha pastroq ekanligi kuzatildi</string>
    <string name="str_refractometer_11">“Kelajak” g‘o‘za navining sug‘orish muddatlarini tuproq namliklariga bog‘liq holda ishlab chiqilgan refraktometr shkalalari, 2018-2019 yillar (Toshkent)</string>
    <string name="str_refractometer_12">O‘rganilgan barcha g‘o‘za navlari orasida suvga bo‘lgan talabi bo‘yicha eng kam bo‘lgan g‘o‘za navi “Jarqo‘rg‘on”, eng yuqori bo‘lgan g‘o‘za navi esa “S-8295” ekanligi kuzatildi. 2019 yilda olib borilgan tadqiqot natijalariga ko‘ra, sug‘orish oldi tuproq namliklari va refraktometr ko‘rsatkichlari 2018 yildagi ko‘rsatkichlarga deyarli yaqin bo‘lib, atigi 0,5-1,0 % orasida farqlandi</string>
    <string name="str_tdr">Tuproq namligini TDR namlik sensori yordamida aniqlash</string>
    <string name="str_tdr_1"> \u0020 AQSH Qishloq xo‘jaligi departamenti (USDA) olimlari tomonidan reflektometriya texnologiyasiga asoslangan aniq o‘lchovchi, tannarxi arzon va kam quvvat bilan ishlaydigan tuproq namligini o‘lchovchi sensorlar yaratildi. TDR310S namlik o‘lchovchi sensorlari AQShning Acclima firmasi tomonidan ishlab chiqariladi. Dunyo amaliyotida namlik o‘lchovlari bo‘yicha eng aniq ko‘rsatkichlar ushbu namlik sensorlariga tegishlidir.</string>
    <string name="str_tdr_2">1-rasm. Acclima TDR310S namlik o‘chlovchi sensor</string>
    <string name="str_tdr_3"> \u0020 TDR310S namlik sensorlari tuproqning elektr o‘tkazuvchanligini sezishi orqali tuproq namliklarini aniqlashga moslashgan. Sensor ko‘rsatkichlari tuproqning hajmiy birlikdagi namligini (volumetric water content) foizlarda ifodalaydi. TDR310S namlik o‘lchovchi datchiklar tuproqning namligini (%), haroratini (°C), elektr o‘tkazuvchanligini aniqlaydi. TDR310S ning foydali xususiyatlaridan biri bu silindrsimon shaklga ega ekanligi bo‘lib, tuproqqa oson o‘rnatish imkonini beradi va kabellari tuproq yuzasida bo‘lib, namlik va boshqa ob-havo taʼsirida chirimaydi. \n
       \u0020  Foydalanish: TDR310S namlik sensorlaridan g‘o‘zaning sug‘orish muddatlarini aniqlash uchun foydalanishda dalaga chigit ekilgandan keyin g‘o‘za qatoridan tomchilatib sug‘oriladigan maydonlarda 0-50 sm chuqurlikda, egatlab sug‘oriladigan maydonlarda 0-100 sm chuqurlikda, kengligi 50 sm bo‘lgan chuqur (o‘ra) qoziladi va unga TDR310S uskunasining 3 ta namlik sensori o‘rnatiladi. Bunda tomchilatib sug‘oriladigan maydonlarda tuproqning 0-10 sm qatlamiga 1 chi sensor, 0-30 sm qatlamga 2 chi sensor, 0-45 sm qatlamga esa 3 chi sensor (egatlab sug‘oriladigan maydonlarda tuproqning 0-50 sm qatlamiga 1 chi sensor, 0-70 sm qatlamga 2 chi sensor, 0-100 sm qatlamga esa 3 chi sensor) o‘rnatiladi va sensorlar ehtiyotkorlik bilan ko‘milib, TDR310S shtekrlari tuproq yuzidan 40-50 sm balandlikda traktor mexanizmlariga xalaqit qilmaydigan qilib tayoq yog‘ochga bog‘lab qo‘yiladi.</string>
    <string name="str_tdr_4">TDR310S namlik sensorlarini dalaga o‘rnatish ketma ketligi</string>
    <string name="str_tdr_5"> \u0020  Tegishli sim karta o‘rnatilgandan keyin maʼlumotlarni internet orqali olish imkoniyati yaratiladi. Shuningdek kichik xotira qurilmasi ham o‘rnatilib, maʼlumotlarni jamlab borish imkoni mavjud. Shuningdek maʼlumotlarni HTTP orqali ThingSpeakTM veb saytidan yuklab olish yoki Hologram dasturi orqali maʼlumotlarni olish imkoni mavjud.</string>
</resources>