<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.experience.electronic.RefractometerFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="2dp"
        android:background="@color/white">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/app_logo"/>

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/inter_medium"
                    android:textColor="#2196F3"
                    android:textSize="20sp"/>
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="12dp">

            <TextView
                android:id="@+id/tvARefractometer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colortext1"
                android:textStyle="bold"
                android:layout_marginTop="15dp"
                android:layout_marginHorizontal="20dp"
                android:gravity="center"
                android:textSize="22sp"
                android:fontFamily="@font/inter_regular"
                android:text="@string/str_refractometer"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/tv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_refractometer_1"
                android:textColor="@color/colortext2"
                android:justificationMode="inter_word"
                android:textSize="16sp"
                android:fontFamily="@font/inter_regular"
                android:gravity="fill_horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvARefractometer"/>

            <TextView
                android:id="@+id/tv2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/str_refractometer_2"
                android:textColor="@color/colortext2"
                android:textSize="16sp"
                android:fontFamily="@font/inter_regular"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv1"/>

            <ImageView
                android:id="@+id/iv1"
                android:layout_width="wrap_content"
                android:layout_height="250dp"
                android:src="@drawable/iv_refractometer_1"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv2"/>

            <TextView
                android:id="@+id/tv3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_refractometer_3"
                android:textColor="@color/colortext2"
                android:justificationMode="inter_word"
                android:textSize="16sp"
                android:textStyle="italic"
                android:fontFamily="@font/inter_regular"
                android:gravity="fill_horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv1"/>

            <TextView
                android:id="@+id/tv4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_refractometer_4"
                android:textColor="@color/colortext2"
                android:justificationMode="inter_word"
                android:textSize="16sp"
                android:fontFamily="@font/inter_regular"
                android:gravity="fill_horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv3"/>

            <TextView
                android:id="@+id/tv5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/str_refractometer_5"
                android:textColor="@color/colortext1"
                android:textSize="16sp"
                android:fontFamily="@font/inter_regular"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv4"/>

            <ImageView
                android:id="@+id/iv2"
                android:layout_width="wrap_content"
                android:layout_height="180dp"
                android:src="@drawable/iv_refractometer_2"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv5"/>

            <TextView
                android:id="@+id/tv6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_refractometer_6"
                android:textColor="@color/colortext2"
                android:textSize="16sp"
                android:fontFamily="@font/inter_regular"
                android:gravity="fill_horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv2"/>

            <TextView
                android:id="@+id/tv7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/str_refractometer_7"
                android:textColor="@color/colortext1"
                android:textSize="16sp"
                android:fontFamily="@font/inter_regular"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv6"/>

            <ImageView
                android:id="@+id/iv3"
                android:layout_width="wrap_content"
                android:layout_height="180dp"
                android:src="@drawable/iv_refractometer_3"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv7"/>

            <TextView
                android:id="@+id/tv8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_refractometer_8"
                android:textColor="@color/colortext2"
                android:textSize="16sp"
                android:fontFamily="@font/inter_regular"
                android:gravity="fill_horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv3"/>

            <TextView
                android:id="@+id/tv9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/str_refractometer_9"
                android:textColor="@color/colortext2"
                android:textSize="16sp"
                android:fontFamily="@font/inter_regular"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv8"/>

            <ImageView
                android:id="@+id/iv4"
                android:layout_width="wrap_content"
                android:layout_height="180dp"
                android:src="@drawable/iv_refractometer_4"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv9"/>

            <TextView
                android:id="@+id/tv10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_refractometer_10"
                android:textColor="@color/colortext2"
                android:justificationMode="inter_word"
                android:textSize="16sp"
                android:fontFamily="@font/inter_regular"
                android:gravity="fill_horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv4"/>

            <TextView
                android:id="@+id/tv11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/str_refractometer_11"
                android:textColor="@color/colortext1"
                android:textSize="16sp"
                android:fontFamily="@font/inter_regular"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv10"/>

            <ImageView
                android:id="@+id/iv5"
                android:layout_width="wrap_content"
                android:layout_height="180dp"
                android:src="@drawable/iv_refractometer_5"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv11"/>

            <TextView
                android:id="@+id/tv12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_refractometer_12"
                android:textColor="@color/colortext2"
                android:justificationMode="inter_word"
                android:textSize="16sp"
                android:fontFamily="@font/inter_regular"
                android:gravity="fill_horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv5"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv12"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>